# Callora-Contracts

./: .gitignore  BENCHMARKS.md  Cargo.toml  EVENT_SCHEMA.md  INVARIANTS.md  PR_MESSAGE.md  PULL_REQUEST.md  README.md  SECURITY.md  SETTLEMENT_IMPLEMENTATION.md  UPGRADE.md  commit.sh  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml
contracts/revenue_pool/: Cargo.toml
contracts/revenue_pool/src/: lib.rs  test.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  test.rs
contracts/vault/: Cargo.toml  STORAGE.md
contracts/vault/src/: lib.rs  test.rs
coverage/: cobertura.xml  tarpaulin-report.html
docs/: ACCESS_CONTROL.md
scripts/: check-wasm-size.sh  coverage.sh
