[workspace]
resolver = "2"
members = ["contracts/vault", "contracts/revenue_pool"]

[workspace.dependencies]
soroban-sdk = "22"

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
